partman-partitioning (70) UNRELEASED; urgency=low

  [ Aurelien Jarno ]
  * Use msdos disklabel (gpt on mac) on kfreebsd-amd64 and kfreebsd-i386,
    as on amd64 and i386.

 -- Luca Favatella <slackydeb@gmail.com>  Fri, 07 Aug 2009 02:11:32 +0200

partman-partitioning (69) unstable; urgency=low

  [ Max Vozeler ]
  * Use ask_active_partition from partman-base.
    Requires partman-base 133.

  [ Updated translations ]
  * Czech (cs.po) by Miroslav Kure
  * Hindi (hi.po)
  * Italian (it.po) by Milo Casagrande

 -- Colin Watson <cjwatson@debian.org>  Tue, 04 Aug 2009 12:12:09 +0100

partman-partitioning (68) unstable; urgency=low

  * Use cdebconf column alignment rather than stralign in toggle_biosgrub.

 -- Colin Watson <cjwatson@debian.org>  Thu, 25 Jun 2009 00:23:46 +0100

partman-partitioning (67) unstable; urgency=low

  * Remove dependency on partman-base; main-menu does not support circular
    dependencies, and the versioned dependency is not all that critical
    (thanks, Per Andersson).

 -- Colin Watson <cjwatson@debian.org>  Thu, 18 Jun 2009 14:47:44 +0100

partman-partitioning (66) unstable; urgency=low

  [ Colin Watson ]
  * Merge from Ubuntu:
    - get_real_device: Add support for /dev/vd*, /dev/xvd*, /dev/cciss/*,
      /dev/ida/*, and /dev/mmcblk* (LP: #282756).
    - When resizing a non-virtual partition, update it after committing
      changes, otherwise we might miss a change of filesystem that was just
      committed (LP: #333356).

  [ Updated translations ]
  * Bengali (bn.po) by Md. Rezwan Shahid
  * Estonian (et.po) by Mattias Põldaru
  * Italian (it.po) by Milo Casagrande
  * Kazakh (kk.po) by Dauren Sarsenov

 -- Christian Perrier <bubulle@debian.org>  Sat, 13 Jun 2009 09:05:52 +0200

partman-partitioning (65) unstable; urgency=low

  [ Colin Watson ]
  * Merge from Ubuntu:
    - Exit straight away if a called script is killed by a signal.
    - Add lpia support to default_disk_label (Emmet Hikory).
    - Add ext4 support.