@@ -16,6 +16,12 @@ endif
 ifeq ($(ARCH), alpha)
 FS_DEPENDS=ntfsprogs-udeb
 endif
+ifeq ($(ARCH), kfreebsd-i386)
+FS_DEPENDS=ntfsprogs-udeb
+endif
+ifeq ($(ARCH), kfreebsd-amd64)
+FS_DEPENDS=ntfsprogs-udeb
+endif
 
 export PACKAGE = partman-partitioning
 
