@@ -3,8 +3,9 @@ partman-partitioning (70) UNRELEASED; urgency=low
   [ Aurelien Jarno ]
   * Use msdos disklabel (gpt on mac) on kfreebsd-amd64 and kfreebsd-i386,
     as on amd64 and i386.
+  * Also depends on ntfsprogs-udeb on kfreebsd-amd64 and kfreebsd-i386. 
 
- -- Luca Favatella <slackydeb@gmail.com>  Fri, 07 Aug 2009 02:11:32 +0200
+ -- Aurelien Jarno <aurel32@debian.org>  Sun, 23 Aug 2009 22:09:53 +0200
 
 partman-partitioning (69) unstable; urgency=low
 
